--- a/E01.html
+++ b/E01.html
@@ -6,9 +6,23 @@
     //Contudo, caso o aluno que ajudou (TUTOR) obteve maior nota, bonifique-o com um adicional de 10% da nota do aluno ajudado, e o programa apresentará a mensagem "CONTINUE ENSINANDO!" e também apresentará a nota final do aluno que ajudou (TUTOR).
 
     //ENTRADA
+    let tutor = Number(prompt('Informe a nota que o aluno que ajudou obteve no terceiro trimestre').replace(',','.'))
+    let ajudado = Number(prompt('Informe a nota que o aluno ajudado obteve no terceiro trimestre').replace(',','.'))
+    let bonus = (tutor) + (ajudado / 10)
 
 
     //PROCESSAMENTO
+    if (ajudado > tutor) {
+        alert(`Cria maior que o criador. Nota = ${ajudado.toFixed(1).replace('.',',')}`)
+    }
+    else if (tutor < 10 && tutor > ajudado) {
+    alert(`Continue ensinando! Nota final = ${bonus.toFixed(1).replace('.',',')}`)
+    }
+    else {
+        alert(`Resposta inválida`)
+    }
+    
+
 
 
     //SAÍDA
