--- a/E02.html
+++ b/E02.html
@@ -9,6 +9,20 @@
     //Calcule o custo total dos alimentos e verifique se há dinheiro suficiente para realizar a compra, indicando se sobrará ou faltará dinheiro, e também apresentando qual foi a quantia que sobrou ou faltou para realizar a compra. Apresente também na tela o valor total da compra.
 
     //ENTRADA
+    let dinheiro = Number(prompt('Informe quanto dinheiro possui para realizar a compra').replace(',','.'))
+    let mamao = Number(prompt('Informe o preço da unidade do mamão').replace(',','.'))
+    let melancia = Number(prompt('Informe o preço do kg da melancia').replace(',','.'))
+    let abacate = Number(prompt('Informe o preço da unidade do abacate').replace(',','.'))
+    let cebola = Number(prompt('Informe o preço do kg da cebola').replace(',','.'))
+    let valortotal = (mamao + melancia + abacate + cebola)
+    let troco = (dinheiro - valortotal)
+    let falta = (valortotal - dinheiro)
+    if (dinheiro >= valortotal) {
+        alert(`Valor total da compra = R$ ${valortotal.toFixed(2).replace('.',',')}. Há dinheiro suficiente para realizar a compra. Troco = R$ ${troco.toFixed(2).replace('.',',')}`)
+    }
+    else if (dinheiro < valortotal) {
+        alert(`Valor total da compra = R$ ${valortotal.toFixed(2).replace('.',',')}. Faltará R$ ${falta.toFixed(2).replace('.',',')} `)
+    }
 
 
     //PROCESSAMENTO
